--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,6 @@ img {
     vertical-align: middle
 }
 
-figure > img {
-    display: block
-}
-
-figcaption {
-    font-size: 14px
-}
-
 ul, ol {
     margin-left: 30px
 }
@@ -65,47 +57,13 @@ a:hover {
     text-decoration: underline
 }
 
-.social-media-list a:hover {
-    text-decoration: none
-}
-
-.social-media-list a:hover .username {
-    text-decoration: underline
-}
-
-blockquote {
-    color: #828282;
-    border-left: 4px solid #e8e8e8;
-    padding-left: 15px;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic
-}
-
-blockquote > :last-child {
-    margin-bottom: 0
-}
-
-pre, code {
+pre {
     font-size: 15px;
     border: 1px solid #e8e8e8;
     border-radius: 3px;
-    background-color: #eef
-}
-
-code {
-    padding: 1px 5px
-}
-
-pre {
+    background-color: #eeee;
     padding: 8px 12px;
     overflow-x: auto
-}
-
-pre > code {
-    border: 0;
-    padding-right: 0;
-    padding-left: 0
 }
 
 .wrapper {
@@ -132,39 +90,6 @@ pre > code {
     clear: both
 }
 
-
-
-.social-media-list li + li {
-    padding-top: 5px
-}
-
-table {
-    margin-bottom: 30px;
-    width: 100%;
-    text-align: left;
-    color: #3f3f3f;
-    border-collapse: collapse;
-    border: 1px solid #e8e8e8
-}
-
-table tr:nth-child(even) {
-    background-color: #f7f7f7
-}
-
-table th, table td {
-    padding: 10px 15px
-}
-
-table th {
-    background-color: #f0f0f0;
-    border: 1px solid #dedede;
-    border-bottom-color: #c9c9c9
-}
-
-table td {
-    border: 1px solid #e8e8e8
-}
-
 .site-header {
     border-bottom: 1px solid #e8e8e8;
     min-height: 55.95px;
@@ -184,96 +109,13 @@ table td {
     color: #424242
 }
 
-.site-nav {
-    float: right;
-    line-height: 54px
-}
-
-.site-nav .nav-trigger {
-    display: none
-}
-
-.site-nav .menu-icon {
-    display: none
-}
-
-.site-nav .page-link {
-    color: #111;
-    line-height: 1.5
-}
-
-.site-nav .page-link:not(:last-child) {
-    margin-right: 20px
-}
-
-@media screen and (max-width: 600px) {
-    .site-nav {
-        position: absolute;
-        top: 9px;
-        right: 15px;
-        background-color: #fdfdfd;
-        border: 1px solid #e8e8e8;
-        border-radius: 5px;
-        text-align: right
-    }
-
-    .site-nav label[for="nav-trigger"] {
-        display: block;
-        float: right;
-        width: 36px;
-        height: 36px;
-        z-index: 2;
-        cursor: pointer
-    }
-
-    .site-nav .menu-icon {
-        display: block;
-        float: right;
-        width: 36px;
-        height: 26px;
-        line-height: 0;
-        padding-top: 10px;
-        text-align: center
-    }
-
-    .site-nav .menu-icon > svg {
-        fill: #424242
-    }
-
-    .site-nav input ~ .trigger {
-        clear: both;
-        display: none
-    }
-
-    .site-nav input:checked ~ .trigger {
-        display: block;
-        padding-bottom: 5px
-    }
-
-    .site-nav .page-link {
-        display: block;
-        padding: 5px 10px;
-        margin-left: 20px
-    }
-
-    .site-nav .page-link:not(:last-child) {
-        margin-right: 0
-    }
-}
-
 .site-footer {
     border-top: 1px solid #e8e8e8;
     padding: 30px 0
 }
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: 15px
-}
-
-.contact-list, .social-media-list {
-    list-style: none;
-    margin-left: 0
+.site-footer img {
+    max-height: 30px;
 }
 
 .footer-col-wrapper {
@@ -325,58 +167,12 @@ table td {
 
 .page-content {
     padding: 30px 0;
-    flex: 1
+    flex: 1;
+    margin-bottom: 30px;
 }
 
-.page-content img{
+.page-content img {
     max-height: 400px;
-}
-
-.page-heading {
-    font-size: 32px
-}
-
-.post-list-heading {
-    font-size: 28px
-}
-
-.post-list {
-    margin-left: 0;
-    list-style: none
-}
-
-.post-list > li {
-    margin-bottom: 30px
-}
-
-.post-meta {
-    font-size: 14px;
-    color: #828282
-}
-
-.post-link {
-    display: block;
-    font-size: 24px
-}
-
-.post-header {
-    margin-bottom: 30px
-}
-
-.post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1
-}
-
-@media screen and (max-width: 800px) {
-    .post-title {
-        font-size: 36px
-    }
-}
-
-.post-content {
-    margin-bottom: 30px
 }
 
 .post-content h2 {
@@ -407,263 +203,4 @@ table td {
     .post-content h4 {
         font-size: 18px
     }
-}
-
-.highlight {
-    background: #fff
-}
-
-.highlighter-rouge .highlight {
-    background: #eef
-}
-
-.highlight .c {
-    color: #998;
-    font-style: italic
-}
-
-.highlight .err {
-    color: #a61717;
-    background-color: #e3d2d2
-}
-
-.highlight .k {
-    font-weight: bold
-}
-
-.highlight .o {
-    font-weight: bold
-}
-
-.highlight .cm {
-    color: #998;
-    font-style: italic
-}
-
-.highlight .cp {
-    color: #999;
-    font-weight: bold
-}
-
-.highlight .c1 {
-    color: #998;
-    font-style: italic
-}
-
-.highlight .cs {
-    color: #999;
-    font-weight: bold;
-    font-style: italic
-}
-
-.highlight .gd {
-    color: #000;
-    background-color: #fdd
-}
-
-.highlight .gd .x {
-    color: #000;
-    background-color: #faa
-}
-
-.highlight .ge {
-    font-style: italic
-}
-
-.highlight .gr {
-    color: #a00
-}
-
-.highlight .gh {
-    color: #999
-}
-
-.highlight .gi {
-    color: #000;
-    background-color: #dfd
-}
-
-.highlight .gi .x {
-    color: #000;
-    background-color: #afa
-}
-
-.highlight .go {
-    color: #888
-}
-
-.highlight .gp {
-    color: #555
-}
-
-.highlight .gs {
-    font-weight: bold
-}
-
-.highlight .gu {
-    color: #aaa
-}
-
-.highlight .gt {
-    color: #a00
-}
-
-.highlight .kc {
-    font-weight: bold
-}
-
-.highlight .kd {
-    font-weight: bold
-}
-
-.highlight .kp {
-    font-weight: bold
-}
-
-.highlight .kr {
-    font-weight: bold
-}
-
-.highlight .kt {
-    color: #458;
-    font-weight: bold
-}
-
-.highlight .m {
-    color: #099
-}
-
-.highlight .s {
-    color: #d14
-}
-
-.highlight .na {
-    color: teal
-}
-
-.highlight .nb {
-    color: #0086B3
-}
-
-.highlight .nc {
-    color: #458;
-    font-weight: bold
-}
-
-.highlight .no {
-    color: teal
-}
-
-.highlight .ni {
-    color: purple
-}
-
-.highlight .ne {
-    color: #900;
-    font-weight: bold
-}
-
-.highlight .nf {
-    color: #900;
-    font-weight: bold
-}
-
-.highlight .nn {
-    color: #555
-}
-
-.highlight .nt {
-    color: navy
-}
-
-.highlight .nv {
-    color: teal
-}
-
-.highlight .ow {
-    font-weight: bold
-}
-
-.highlight .w {
-    color: #bbb
-}
-
-.highlight .mf {
-    color: #099
-}
-
-.highlight .mh {
-    color: #099
-}
-
-.highlight .mi {
-    color: #099
-}
-
-.highlight .mo {
-    color: #099
-}
-
-.highlight .sb {
-    color: #d14
-}
-
-.highlight .sc {
-    color: #d14
-}
-
-.highlight .sd {
-    color: #d14
-}
-
-.highlight .s2 {
-    color: #d14
-}
-
-.highlight .se {
-    color: #d14
-}
-
-.highlight .sh {
-    color: #d14
-}
-
-.highlight .si {
-    color: #d14
-}
-
-.highlight .sx {
-    color: #d14
-}
-
-.highlight .sr {
-    color: #009926
-}
-
-.highlight .s1 {
-    color: #d14
-}
-
-.highlight .ss {
-    color: #990073
-}
-
-.highlight .bp {
-    color: #999
-}
-
-.highlight .vc {
-    color: teal
-}
-
-.highlight .vg {
-    color: teal
-}
-
-.highlight .vi {
-    color: teal
-}
-
-.highlight .il {
-    color: #099
 }
